# aruco_markers

./: CMakeLists.txt  main.cpp
aruco/include/opencv2/: aruco.hpp
aruco/src/: aruco.cpp
